tests/reference/asr_preprocess-preprocessor10-6279d1f.stderr
C preprocessor error: Unknown token '\'
 --> tests/preprocessor10.f90:1:18
  |
1 | program preprocessor10
  |                  ^ 
